[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["booru_toolkit", "launcher"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false

[tool.poetry]
name = "libdotfiles"
version = "0.0.0"
description = "Wrapper script around my dotfiles"
authors = ["Marcin Kurczewski <dash@wind.garden>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rr-/dotfiles"
packages = [
    { include = "libdotfiles" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
coloredlogs = "^15.0.1"
click = "^8.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
