[project]
name = "libdotfiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["libdotfiles"]

[tool.setuptools.package-dir]
libdotfiles = "."
